--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,5 +1,6 @@
 <ul>
   <li *ngFor="let product of products | async">
-    {{ product.$name }}
+    {{ product.name }}
+    {{ product.sellprice }}
   </li>
 </ul>
